--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"tinymist.formatterMode": "typstyle",
 	"editor.defaultFormatter": "myriad-dreamin.tinymist",
-	"tinymist.formatterPrintWidth": 160
+	"tinymist.formatterPrintWidth": 160,
+	"tinymist.fontPaths": ["typst/fonts"]
 }
